[tool.poetry]
name = "gpt-play"
version = "0.1.0"
description = ""
authors = ["Hao Yuan <haoyuan80s@gmail.com>", "Jainxuan Wang <lua@home.com>"]
readme = "README.md"
packages = [{ include = "gpt_play" }]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.7"
click = "^8.1.3"
pydantic = "^1.10.7"
sympy = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
play = "play:main"
